# aurion

./: Cargo.toml  README.md
src/: main.rs
src/app/: audio.rs  mod.rs  wgcapture.rs
src/app/shaders/: quad.wgsl  spectrum.wgsl
