[package]
name = "aurion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
crossbeam = "0.8.4"
pollster = "0.4.0"
rustfft = "6.4.1"
thiserror = "2.0.17"
wgpu = "26.0.1"
winit = "0.30.12"
raw-window-handle = "0.6"

[features]
default = []
wgcapture = ["windows"]
dcomp = ["windows"]

[dependencies.windows]
version = "0.56.0"
optional = true
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectComposition",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Foundation",
]

[[bin]]
name = "aurion-dcomp"
path = "src/bin/dcomp.rs"
